# apertium-rus

./: .gitattributes  .gitignore  Makefile  Makefile.am  apertium-rus.pc.in  apertium-rus.rus.dix  apertium-rus.rus.rlx  configure.ac  modes.xml  qa.sh  spellrelax.xsl
dev/: snjatnik_missing.txt  stem-list.txt  to_add.txt  to_check.txt
dev/giellatekno/: conv.sh  export-to-apertium.sh  speling-autodix-adj.py
expanded/: diff-previous-vs-current.txt
scripts/: evaluate-tagger.py
scripts/corpconv/: analyse.py  cglib.py  rnc-gt-missing-lemmas.txt  rnc2cg.py  rnclib.py  rnctags.py  runtests.sh
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
test-scripts/: rus.test
texts/: cyprus.ana.txt  cyprus.log.txt  dva-samoubijstva.ana.txt  dva-samoubijstva.log.txt  murmansk.ana.txt  murmansk.log.txt  murmansk.raw.txt  murmansk.tok.txt  rasskaz.tagged.spectie.txt  rwanda.ana.txt  rwanda.log.txt  son-smešnogo-čeloveka.ana.txt  son-smešnogo-čeloveka.log.txt  update-log.sh
texts/codein/: anglija1.tagged.olexiy.txt  anglija1.tagged.stan98.txt  anglija1.vislcg.txt  athens.tagged.stan98.txt  athens.vislcg.txt  athens2.tagged.stan98.txt  athens2.vislcg.txt  aviapushka1.tagged.stan98.txt  aviapushka1.vislcg.txt  inkvizicija.vislcg.txt  innovacija1.tagged.stan98.txt  innovacija1.vislcg.txt  iskusstvennyj_intellekt1.tagged.stan98.txt  iskusstvennyj_intellekt1.vislcg.txt  kiev.tagged.olexiy.txt  kiev.vislcg.txt  kiev1.tagged.olexiy.txt  kiev1.tagged.stan98.txt  kiev1.tagged.vladyslav.txt  kiev1.vislcg.txt  peresadku_serdce1.tagged.olexiy.txt  peresadku_serdce1.vislcg.txt  runes.vislcg.txt  rycar1.tagged.stan98.txt  rycar1.vislcg.txt  rycar2.tagged.stan98.txt  rycar2.vislcg.txt  sfera1.tagged.stan98.txt  sfera1.vislcg.txt  svjataja_inkvizicija1.raw.txt  svjataja_inkvizicija1.tagged.stan98.txt  svjataja_inkvizicija1.vislcg.txt  uranus.tagged.olexiy.txt  uranus.vislcg.txt  vikingi1.vislcg.txt  zheleznaja_doroga1.tagged.olexiy.txt  zheleznaja_doroga1.tagged.stan98.txt  zheleznaja_doroga1.vislcg.txt
texts/others/: dva-samoubijstva.tagged.spectie.txt  rasskaz.tagged.spectie.txt  rwanda.tagged.spectie.txt
